# ollama-benchmark

./: .gitignore  LICENSE  README.md  benchmark.py  engine.py  gpu_monitor.py  main.py  pyproject.toml
ollamabenchmark/: __init__.py  __main__.py  benchmark.py  config.py  engine.py  ollama_client.py  report.py  tui.py
