[project]
name = "ollamabenchmark"
version = "0.1.0"
description = "Ollama GPU/CPU benchmarking and VRAM usage monitoring tool."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
]

[project.scripts]
ollamabenchmark = "ollamabenchmark.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true


